// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextField.js should have readonly attribute 1`] = `

<div class="input-group input-group--text-field">
  <div class="input-group__input">
    <input readonly="readonly"
           tabindex="0"
           type="text"
    >
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VTextField.js should not display counter when set to false 1`] = `

<div class="input-group input-group--text-field">
  <div class="input-group__input">
    <input tabindex="0"
           type="text"
    >
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
    <div class="input-group__counter">
      0 / 25
    </div>
  </div>
</div>

`;

exports[`VTextField.js should not display counter when set to false 2`] = `

<div class="input-group input-group--text-field">
  <div class="input-group__input">
    <input tabindex="0"
           type="text"
    >
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component and match snapshot 1`] = `

<div class="input-group input-group--text-field">
  <div class="input-group__input">
    <input tabindex="0"
           type="text"
    >
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;
